--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,5 @@
     <string name="pref_title_image">图片加载设置</string>
     <string name="pref_title_notify">消息同步</string>
     <string name="action_order">浏览顺序</string>
+    <string name="pref_layout">布局设置(重启生效)</string>
 </resources>
